--- a/style.css
+++ b/style.css
@@ -103,4 +103,21 @@ main {
 footer {
   height: 70px;
   background-color: var(--primary-dark);
+  font-size: 0.5em;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+
+.fa-github {
+  color: var(--primary-light);
+  font-size: 24px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.fa-github:hover {
+  transform: rotate(360deg) scale(1.2);
 }
